# pipes-merge

./: pipes-merge.cabal
src/Pipes/: Merge.hs
test/: Spec.hs
