name:                pipes-merge
version:             0.1.0.0
synopsis:            Nondeterministic merging of IO based pipes
description:         Please see README.md
homepage:            https://github.com/bogiebro/pipes-chp#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Anklesaria
maintainer:          ankle@mit.edu
copyright:           2017 Sam Anklesaria
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pipes.Merge
  build-depends:       base >= 4.7 && < 5, pipes, lifted-base, monad-control, stm, transformers-base
  default-language:    Haskell2010

test-suite benchmarks
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipes
                     , pipes-merge
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pipes-chp
